test/spec/call.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/call.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/call.wast:152:30: type stack size too small at i32.eqz. got 0, expected at least 1
    (func $type-void-vs-num (i32.eqz (call 1)))
                             ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:152:5: type stack at end of function is 1. expected 0
    (func $type-void-vs-num (i32.eqz (call 1)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:159:29: type mismatch at i32.eqz. got i64, expected i32
    (func $type-num-vs-num (i32.eqz (call 1)))
                            ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:159:5: type stack at end of function is 1. expected 0
    (func $type-num-vs-num (i32.eqz (call 1)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:167:26: type stack size too small at call. got 0, expected at least 1
    (func $arity-0-vs-1 (call 1))
                         ^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:174:26: type stack size too small at call. got 0, expected at least 2
    (func $arity-0-vs-2 (call 1))
                         ^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:181:5: type stack at end of function is 1. expected 0
    (func $arity-1-vs-0 (call 1 (i32.const 1)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:188:5: type stack at end of function is 2. expected 0
    (func $arity-2-vs-0 (call 1 (f64.const 2) (i32.const 1)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:196:36: type stack size too small at call. got 1, expected at least 2
    (func $type-first-void-vs-num (call 1 (nop) (i32.const 1)))
                                   ^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:203:37: type stack size too small at call. got 1, expected at least 2
    (func $type-second-void-vs-num (call 1 (i32.const 1) (nop)))
                                    ^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:210:35: type mismatch for argument 0 of call. got f64, expected i32
    (func $type-first-num-vs-num (call 1 (f64.const 1) (i32.const 1)))
                                  ^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:210:35: type mismatch for argument 1 of call. got i32, expected f64
    (func $type-first-num-vs-num (call 1 (f64.const 1) (i32.const 1)))
                                  ^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:217:36: type mismatch for argument 0 of call. got i32, expected f64
    (func $type-second-num-vs-num (call 1 (i32.const 1) (f64.const 1)))
                                   ^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:217:36: type mismatch for argument 1 of call. got f64, expected i32
    (func $type-second-num-vs-num (call 1 (i32.const 1) (f64.const 1)))
                                   ^^^^^^
assert_invalid error:
  out/third_party/testsuite/call.wast:227:37: function variable out of range (max 1)
  (module (func $unbound-func (call 1)))
                                    ^
assert_invalid error:
  out/third_party/testsuite/call.wast:231:35: function variable out of range (max 1)
  (module (func $large-func (call 1012321300)))
                                  ^^^^^^^^^^
out/third_party/testsuite/call.wast:151: assert_invalid passed:
  error: type stack size too small at i32.eqz. got 0, expected at least 1
  error: @0x0000001b: on_convert_expr callback failed
out/third_party/testsuite/call.wast:158: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got i64.
  error: @0x0000001f: on_convert_expr callback failed
out/third_party/testsuite/call.wast:166: assert_invalid passed:
  error: type stack size too small at call. got 0, expected at least 1
  error: @0x0000001e: on_call_expr callback failed
out/third_party/testsuite/call.wast:173: assert_invalid passed:
  error: type stack size too small at call. got 0, expected at least 2
  error: @0x0000001f: on_call_expr callback failed
out/third_party/testsuite/call.wast:180: assert_invalid passed:
  error: type stack at end of func is 1. expected 0
  error: @0x0000001d: end_function_body callback failed
out/third_party/testsuite/call.wast:187: assert_invalid passed:
  error: type stack at end of func is 2. expected 0
  error: @0x00000026: end_function_body callback failed
out/third_party/testsuite/call.wast:195: assert_invalid passed:
  error: type stack size too small at call. got 1, expected at least 2
  error: @0x00000022: on_call_expr callback failed
out/third_party/testsuite/call.wast:202: assert_invalid passed:
  error: type stack size too small at call. got 1, expected at least 2
  error: @0x00000022: on_call_expr callback failed
out/third_party/testsuite/call.wast:209: assert_invalid passed:
  error: type mismatch in call, expected f64 but got i32.
  error: @0x0000002a: on_call_expr callback failed
out/third_party/testsuite/call.wast:216: assert_invalid passed:
  error: type mismatch in call, expected i32 but got f64.
  error: @0x0000002a: on_call_expr callback failed
out/third_party/testsuite/call.wast:227: assert_invalid passed:
  error: @0x00000019: invalid call function index
out/third_party/testsuite/call.wast:231: assert_invalid passed:
  error: @0x0000001d: invalid call function index
47/47 tests passed.
;;; STDOUT ;;)
